FIX text alignment, error building

--- a/resources/scss/ceres/views/PageDesign/_navigation.scss
+++ b/resources/scss/ceres/views/PageDesign/_navigation.scss
@@ -307,12 +307,12 @@ nav.navbar.megamenu {
 								.bt-more>a { text-transform: lowercase; }
 							}
 
-
 							ul { background-color : white; }
 							a {
-								background : white;
-								color : $megamenu-color-bottom;
-								padding : .4rem 1rem;
+								background 	: white;
+								color 		: $megamenu-color-bottom;
+								padding 	: .4rem 1rem;
+								text-align 	: left;
 
 								&:hover{ 
 									background 	: $brand-primary; 
